--- a/style.css
+++ b/style.css
@@ -4,13 +4,16 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-body{
+/*index*/
+
+.home{
     background: linear-gradient(to top, rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(images/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 115.8vh;
     background-position: absolute;
+    display: flex;
 }
 
 .box{
@@ -18,8 +21,8 @@ body{
     position: relative;
     width: 500px;
     height: 600px;
-    margin: 250px;
-    margin-top: 80px;
+    margin: 150px;
+    margin-top: 60px;
     color: white;
     text-align: center;
     border-radius: 20px;
@@ -36,7 +39,7 @@ body{
     font-size: 30px;
     font-weight: 500;
     letter-spacing: 2px;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .box video{
@@ -45,4 +48,83 @@ body{
     border-radius: 10px;
     border: 3px solid;
     border-color: #FFB84C;
+}
+
+.about{
+    color: #fff;
+    margin: 150px auto;
+    margin-right: 130px;
+    text-align: center;
+}
+
+.about h1{
+    font-size: 50px;
+    font-weight: 400;
+    letter-spacing: 3px;
+    text-align: center;
+    line-height: 80px;
+}
+
+.about p{
+    font-size: 18px;
+    font-weight: 20;
+    line-height: 25px;
+    text-align: justify;
+}
+
+.about button{
+    width: 30%;
+    height: 40px;
+    background: linear-gradient(to right, #FFB84C, #F16767);
+    margin-top: 20px;
+    text-decoration: none;
+    border: 1px solid;
+    border-radius: 20px;
+    transition: .5s;
+}
+
+.about button:hover{
+    background: linear-gradient(to right, #F16767, #FFB84C);
+}
+
+/*bounties*/
+
+.bounty{
+    text-align: center;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+}
+
+.bounty h1{
+    margin: 20px;
+    font-size: 50px;
+    font-weight: 500;
+    letter-spacing: 5px;
+    cursor: pointer;
+}
+
+table{
+    margin: auto;
+    margin-top: 30px;
+}
+
+table tr td img{
+    height: 450px;
+    width: 400px;
+    margin: 20px;
+    border: 4px solid #F16767;
+    cursor: pointer;
+    transition: .5s;
+}
+
+td img:hover{
+    filter: brightness(80%);
+}
+
+@media only screen and (max-width: 600px){
+    .bounty h1{
+        margin: 20px;
+        font-size: 10px;
+        font-weight: 500;
+        letter-spacing: 5px;
+    }
 }
