--- a/style.css
+++ b/style.css
@@ -201,9 +201,11 @@ footer p{
 }
 
 a{
-    font-size: 20px;
+    font-size: 25px;
     text-decoration: none;
-    margin: 15px;
+    margin-top: 12px:
+    margin-left: 10px;
+    color: #000000;
 }
 
 .bounty-container h1{
